--- a/style.css
+++ b/style.css
@@ -40,6 +40,66 @@
             text-align: center;
             margin-bottom: 30px;
         }
+          .vhod input [type ='text'] {
+            width: 100px ;
+            height: 100px;
+            color:chartreuse ;
+        }
+        .vhod input::placeholder{
+            color: brown;
+            font-size: 20px;
+        
+        }
+        .vhodst {
+            height: 400px;
+            width: 420px;
+            background-color: rgba(187, 162, 21, 0.904);
+            float: left;
+            margin-left: 750px;
+            border-width: 8px;
+            border-color: gold;
+            border-style: outset;
+            border-radius: 10px 100px 100px 100px;
+                
+        }
+        .reg_nam {
+            font-size: 17px;
+        }
+        
+        input[type = 'checkbox']{
+            width: 30px;
+            height: 30px;
+        
+        }
+        p{
+            font-size: 15px;
+        }
+        .reg input [type ='text'] {
+            width: 100px ;
+            height: 100px;
+            color:chartreuse ;
+        }
+        .reg input::placeholder{
+            color: brown;
+            font-size: 20px;
+        
+        }
+        .regist {
+            height: 400px;
+            width: 420px;
+            background-color: rgba(187, 162, 21, 0.904);
+            float: left;
+            margin-left: 750px;
+            border-width: 8px;
+            border-color: gold;
+            border-style: outset;
+            border-radius: 15px 250px 250px 80px;
+                
+        }
+        .reg_nam {
+            font-size: 17px;
+        }
+
 
         /*  карточки кейсов */
         .cases_grid {
